force-app/main/default/objects/Template_Scenario__mdt/Template_Scenario__mdt.object-meta.xml
<CustomObject>
    <description>Maps a case scenario to an email template. The AI flow queries these records to build a candidate shortlist, then resolves the body from the linked EmailTemplate record.</description>
    <label>Template Scenario</label>
    <pluralLabel>Template Scenarios</pluralLabel>
    <fields>
        <fullName>When_To_Use__c</fullName>
        <label>When To Use</label>
        <length>500</length>
        <type>LongTextArea</type>
        <description>One or two sentences describing when a CSR should use this template. Example: Use when a practice is requesting a Medical Director change on a credentialed account.</description>
    </fields>
    <fields>
        <fullName>Email_Template_API_Name__c</fullName>
        <label>Email Template API Name</label>
        <length>255</length>
        <type>Text</type>
        <description>The DeveloperName of the Classic Email Template record whose body this scenario maps to. The Prompt Flow resolves the body from EmailTemplate at runtime using this value.</description>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
        <description>Matches the Case.Type picklist value. Used by the flow to filter relevant templates.</description>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
        <description>Matches the Case.Reason picklist value. Used by the flow to filter relevant templates.</description>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
        <description>Inactive records are excluded from the flow query.</description>
    </fields>
</CustomObject>