force-app/main/default/objects/Template_Scenario__mdt/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <description>Matches the Case.Reason picklist value. Used by the flow to filter relevant templates.</description>
    <label>Case Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>