force-app/main/default/objects/Template_Scenario__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Matches the Case.Type picklist value. Used by the flow to filter relevant templates.</description>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>