force-app/main/default/objects/Template_Scenario__mdt/fields/Email_Template_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_API_Name__c</fullName>
    <description>The DeveloperName of the Classic Email Template record whose body this scenario maps to. The Prompt Flow resolves the body from EmailTemplate at runtime using this value.</description>
    <label>Email Template API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>