force-app/main/default/objects/Template_Scenario__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive records are excluded from the flow query.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>