force-app/main/default/objects/Template_Scenario__mdt/fields/Template_Body__c.field-meta.xml
<CustomField>
    <fullName>Template_Body__c</fullName>
    <description>The full email template text including all mandatory language, form names, SLAs, and placeholders.</description>
    <label>Template Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>