force-app/main/default/objects/Template_Scenario__mdt/fields/When_To_Use__c.field-meta.xml
<CustomField>
    <fullName>When_To_Use__c</fullName>
    <description>One or two sentences describing when a CSR should use this template. Example: Use when a practice is requesting a Medical Director change on a credentialed account.</description>
    <label>When To Use</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>